--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,15 @@
 header {
   background-color: #7BA098;
-  border-radius: 4px;  
+  border-radius: 4px;
+  padding: 20px 30px 20px 30px;   
 }
 body {
     width: 550px;
 }
 footer {
   background-color: #7BA098;
-  border-radius: 4px;  
+  border-radius: 4px;
+  padding: 15px 25px 15px 25px;
 }
 .profile-image {
     height: 175px;
