--- a/styles.css
+++ b/styles.css
@@ -18,5 +18,5 @@ footer {
     box-shadow: 5px 5px rgb(199, 199, 199);
 }
 .course-headline {
-    border-bottom: rgb(165, 164, 164);
+    border-bottom: rgba(165, 164, 164, 0.712);
 }
