--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,11 @@ footer {
 .profile-image {
     height: 175px;
     float: right;
+    margin-bottom: 30px;
+    margin-right: 10px;
     border-radius: 3px;
     box-shadow: 5px 5px rgb(199, 199, 199);
 }
 .course-headline {
-    border-bottom: rgba(165, 164, 164, 0.712);
+    border-bottom: rgba(165, 164, 164, 0.534);
 }
