--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ footer {
     float: right;
     border-radius: 3px;
     box-shadow: 5px 5px rgb(199, 199, 199);
-    margin-top: 0;
+    margin-bottom: 50px;
 }
 .course-headline {
     border-bottom: rgba(165, 164, 164, 0.534);
