--- a/Lesson2/L2styles.css
+++ b/Lesson2/L2styles.css
@@ -1,6 +1,13 @@
-h1 {
+h1,h2,h3,h4 {
+    font-family: 'Lato', 'Sans-Serif';
     color: blue;
 }
+p {
+    font-family: 'Roboto', 'Sans-Serif'; 
+}
 img {
+    max-width: 100%;
+    display: block;
     width: 550px;
+    border-radius: 4px;
 }
