--- a/Lesson2/L2styles.css
+++ b/Lesson2/L2styles.css
@@ -13,3 +13,12 @@ img {
     width: 550px;
     border-radius: 6px;
 }
+sec-1 {
+    border: black;
+}
+sec-2 {
+    border: black;
+}
+sec-3 {
+    border: black;
+}
