--- a/Lesson2/L2styles.css
+++ b/Lesson2/L2styles.css
@@ -14,11 +14,14 @@ img {
     border-radius: 6px;
 }
 sec-1 {
+    border-style: solid;
     border: black;
 }
 sec-2 {
+    border-style: solid;
     border: black;
 }
 sec-3 {
+    border-style: solid;
     border: black;
 }
