--- a/Lesson2/L2styles.css
+++ b/Lesson2/L2styles.css
@@ -15,7 +15,7 @@ img {
 }
 main {
     display: grid;
-    grid-template-columns: repeat(3, auto);
+    grid-template-columns: repeat(3, 300px);
     grid-template-rows: auto;
 }
 article {
