--- a/Lesson2/L2styles.css
+++ b/Lesson2/L2styles.css
@@ -31,3 +31,7 @@ article {
     border-radius: 7px;
     background-color: rgb(226, 224, 224);
 }
+.principle-1,.principle-2,.principle-3 {
+    height: 100%;
+    width: 100%;
+}
