--- a/Lesson2/L2styles.css
+++ b/Lesson2/L2styles.css
@@ -24,6 +24,7 @@ main {
     display: grid;
     grid-template-columns: repeat(3, 500px);
     grid-template-rows: auto;
+    grid-gap: 10px;
 }
 article {
     border-style: solid;
