--- a/Lesson2/L2styles.css
+++ b/Lesson2/L2styles.css
@@ -23,7 +23,7 @@ a {
 main {
     display: grid;
     grid-template-columns: repeat(3, 450px);
-    grid-template-rows: repeat(3, auto);
+    grid-template-rows: auto;
     grid-gap: 30px;
 }
 article {
