--- a/Lesson2/L2styles.css
+++ b/Lesson2/L2styles.css
@@ -24,6 +24,7 @@ a {
     background-color: #5B7553;
     border-radius: 7px;
     overflow: hidden;
+    margin-bottom: 10px;
 }
 body {
     margin-left: 20px;
