--- a/Lesson2/L2styles.css
+++ b/Lesson2/L2styles.css
@@ -46,3 +46,7 @@ article {
     width: 100%;
     padding: 50px, 50px, 50px, 50px;
 }
+.sub-headline {
+    align-self: center;
+    color: white;
+}
