--- a/Lesson2/L2styles.css
+++ b/Lesson2/L2styles.css
@@ -21,10 +21,26 @@ a {
     color: rgb(0, 0, 139);
   }
 .lesson-2-header {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: auto;
     background-color: #5B7553;
     border-radius: 7px;
     overflow: hidden;
+    padding-bottom: 30px;
     margin-bottom: 10px;
+}
+.headline-1 {
+    grid-column: 2;
+    grid-row: 1;
+    place-self: center;
+}
+.sub-headline {
+    grid-column: 2;
+    grid-row: 1;
+    margin-top: 90px;
+    color: white;
+    place-self: center;
 }
 body {
     margin-left: 20px;
@@ -45,8 +61,4 @@ article {
 .principle-1 {
     width: 100%;
     padding: 50px, 50px, 50px, 50px;
-}
-.sub-headline {
-    align-self: center;
-    color: white;
 }
