--- a/Lesson2/l2styles.css
+++ b/Lesson2/l2styles.css
@@ -46,12 +46,14 @@ body {
     margin-left: 30px;
     margin-right: 30px;
 }
+/*
 main {
     display: grid;
     grid-template-columns: repeat(3, 466px);
     grid-template-rows: auto;
     grid-gap: 30px;
 }
+*/
 article {
     border-style: solid;
     border-color: grey;
