--- a/small.css
+++ b/small.css
@@ -29,10 +29,10 @@ footer {
   padding: 10px 15px 10px 15px;
 }
 .profile-image {
-    height: 175px;
+    height: 225px;
     float: right;
     clear: both;
-    margin-top: 0;
+    margin-top: 30px;
     border-radius: 4px;
 }
 .course-headline {
