--- a/Lesson2/l2large.css
+++ b/Lesson2/l2large.css
@@ -5,4 +5,13 @@
         grid-template-rows: auto;
         grid-gap: 30px;
     }
+    h1 {
+        font-size: 2em;
+    }
+    h2 {
+        font-size: 1.5em;
+    }
+    h3 {
+        font-size: 1.17em;
+    }
 }
