--- a/Lesson2/l2styles.css
+++ b/Lesson2/l2styles.css
@@ -1,6 +1,15 @@
 h1,h2,h3,h4 {
     font-family: 'Lato', 'Sans-Serif';
 }
+h1 {
+    font-size: 1.4em;
+}
+h2 {
+    font-size: 1.15em;
+}
+h3 {
+    font-size: 1em;
+}
 h1,h2 {
     background-color: #5B7553;
     color: white;
