--- a/media_query/medium.css
+++ b/media_query/medium.css
@@ -1,3 +1,21 @@
 @media only screen and (min-width: 32.5em) {
-    
+    .profile-image {
+        float: right;
+        overflow: hidden;
+        margin-top: 20px;
+        border-radius: 4px;
+    }
+    body {
+        width: 600px;
+    }
+    header {
+        width: 100%;
+    }
+    footer {
+        width: 100%;
+    }
+    img {
+        max-width: 100%;
+        display: block;
+      }
 }
