--- a/Lesson2/l2large.css
+++ b/Lesson2/l2large.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 64em) {
     main {
         display: grid;
-        grid-template-columns: repeat(3, 466px);
+        grid-template-columns: repeat(3, 1fr);
         grid-template-rows: auto;
         grid-gap: 30px;
     }
@@ -13,5 +13,8 @@
     }
     h3 {
         font-size: 1.17em;
+    }
+    .sec-3 {
+        grid-column: 3;
     }
 }
