--- a/Lesson2/l2medium.css
+++ b/Lesson2/l2medium.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 32.5em) {
     main {
         display: grid;
-        grid-template-columns: repeat(3, 445px);
+        grid-template-columns: repeat(2, 1fr);
         grid-template-rows: auto;
         grid-gap: 30px;
     }
@@ -13,5 +13,17 @@
     }
     h3 {
         font-size: 1.05em
+    }
+    .lesson-2-header {
+        border-radius: 7px;
+    }
+    article {
+        border-radius: 7px;
+    }
+    .sec-1 {
+        grid-column: 1;
+    }
+    .sec-2 {
+        grid-column: 2;
     }
 }
